[gd_scene load_steps=2 format=3 uid="uid://sq4mx70spr6d"]

[ext_resource type="Script" path="res://control.gd" id="1_0763g"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0763g")

[node name="TimerLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -199.0
offset_right = 87.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 128
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuestionButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -577.0
offset_top = -241.0
offset_right = -444.0
offset_bottom = -206.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(8.92553, 6.07288)

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="pressed" from="QuestionButton" to="." method="_on_QuestionButton_pressed"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_countdown_timer_timeout"]
